# kr-elevate-module3

./: .agents-cli-spec.md  .gcloudignore  .gitignore  AGENT.md  Dockerfile  GEMINI.md  PROJECT_CONFIG.md  README.md  agents-cli-manifest.yaml  pyproject.toml
.agents/plugins/sdd-evaluation-plugin/: README.md  plugin.json
.agents/plugins/sdd-evaluation-plugin/rules/: project-config-rules.md  sdd-evaluation-guardrails.md
.agents/plugins/sdd-evaluation-plugin/skills/agent-eval-guide/: README.md  SKILL.md
.agents/plugins/sdd-evaluation-plugin/skills/architecture-drift-evaluation/: SKILL.md
agent/: __init__.py  agent.py  config.py  fast_api_app.py  main.py  root_orchestrator.py
agent/.adk/: session.db
agent/.adk/eval_history/: agent_test_set_1_1784712693.0883021.evalset_result.json
agent/static/: index.html
agent/sub_agents/: __init__.py  itsm_agent.py  policy_rag_agent.py  workweek_agent.py
agent/tools/: __init__.py  gcp_rag_engine.py  itsm_mcp.py  model_armor.py  rag_tool.py  workweek_mcp.py
evals/: eval_config.json
evals/datasets/: README.md  test.evalset.json
knowledge/: README.md  expense_policy.md  leave_policy.md  relocation_policy.md  remote_work_policy.md
resources/: Enterprise Agentic Solution Design Document - HR Agentic Solution (MVP 1).md  Enterprise_HR_Agentic_Solution_Design_Document_v2.md  HR Agentic Solution BRD - Kor Trainer.md  openapi.json
scratch/: query_tickets.py  run_local_eval.py
scripts/: deploy_agent_runtime.sh  deploy_cloud_run.sh  ingest_knowledge_to_gcp.py  test_policy_agent.py
tests/: test_gcp_rag_engine.py
(+18 files in other folders)
